--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="index_active.css">
+    <link rel="stylesheet" href="Desktop.css">
 </head>
 <body>
     <div class="container">
@@ -16,7 +16,7 @@
         <span>London, United Kingdom</span>
         <p>"Front-end developer and avid reader."</p>
         <div class="links">
-            <a href="/#">GitHub</a>
+            <a href="/#" class="active-link">GitHub</a>
             <a href="/#">Frontend Mentor</a>
             <a href="/#">Linkedln</a>
             <a href="/#">Twitter</a>
